<resources>
    <string name="app_name">FestPay Vendor</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login">Log In</string>
    <string name="login_forget_password">Did you forget your password?</string>
    <string name="forgotten_password">Forgotten Password</string>
    <string name="forgotten_password_aware">An e-mail with the password will be sent to your address.</string>
    <string name="search">Search</string>
    <string name="order">Order</string>
    <string name="imageName">Picture</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="customer">Customer</string>
    <string name="date">Date</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="confirm">Confirm</string>
    <string name="clear">Clear</string>
    <string name="split">_,_</string>
    <string name="service_name">CardEmulation</string>
    <string name="card_title">FestPay Card</string>
</resources>