<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.ariondan.vendor.activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_login_email"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_textColorHint="@color/silver" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_login_password"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/login_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_textColorHint="@color/silver" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:background="@drawable/corners_blue"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forget_password"
        android:textColor="@color/silverDark"
        android:textStyle="italic|bold" />

</LinearLayout>
