<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ariondan.vendor.activity.HistoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layout_container_search_history"
            android:layout_width="256dp"
            android:layout_height="52dp"
            android:layout_centerInParent="true"
            android:gravity="center">

            <Button
                android:id="@+id/button_clear_search_history"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/cancel" />

            <AutoCompleteTextView
                android:id="@+id/edit_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/button_clear_search_history"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/search"
                android:imeOptions="actionSearch|flagNoExtractUi"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/silver" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/silverLight" />

        </RelativeLayout>

        <Button
            android:id="@+id/button_search_history"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:background="@drawable/search" />

        <Button
            android:id="@+id/button_history_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:background="@drawable/back" />

        <!--Replace with light button-->

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center"
            android:text="@string/order"
            android:textAllCaps="true"
            android:textColor="@color/silverDark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textColor="@color/silverDark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="@color/silverDark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center"
            android:text="@string/price"
            android:textAllCaps="true"
            android:textColor="@color/silverDark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center"
            android:text="@string/customer"
            android:textAllCaps="true"
            android:textColor="@color/silverDark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center"
            android:text="@string/date"
            android:textAllCaps="true"
            android:textColor="@color/silverDark"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/silverLight" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbars="none" />

</LinearLayout>
