<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_products_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layout_container_search"
            android:layout_width="256dp"
            android:layout_height="52dp"
            android:layout_centerInParent="true"
            android:gravity="center">

            <Button
                android:id="@+id/button_clear_search"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/cancel" />

            <AutoCompleteTextView
                android:id="@+id/edit_auto_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/button_clear_search"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/search"
                android:imeOptions="actionSearch|flagNoExtractUi"
                android:textColor="@color/black"
                android:textColorHint="@color/silver" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/silverLight" />

        </RelativeLayout>

        <Button
            android:id="@+id/button_history"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:background="@drawable/history" />

        <Button
            android:id="@+id/button_filter"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:background="@drawable/filter" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:layout_toStartOf="@id/button_filter"
            android:background="@drawable/search" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/grid_products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_cart"
        android:layout_below="@id/layout_products_actionbar"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:gravity="center"
        android:padding="16dp"
        android:scrollbars="none" />

    <RelativeLayout
        android:id="@+id/layout_cart"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentBottom="true"
        android:elevation="4dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/silverLight" />

        <LinearLayout
            android:id="@+id/layout_cart_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_cart_confirm"
                android:layout_width="128dp"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:background="@drawable/corners_blue"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_cart_clear"
                android:layout_width="128dp"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:background="@drawable/border_light"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/blue" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/layout_cart_buttons"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:padding="16dp"
            android:scrollbars="none" />

    </RelativeLayout>

</RelativeLayout>